# multi_lambda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
include/: CMakeLists.txt  multi_lambda.h
tests/: CMakeLists.txt  traits_tests.cpp
